node-affinity/service-na-hello.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-na
    app.kubernetes.io/component: hello-na
    app.kubernetes.io/instance: hello-na
  name: hello-na
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: hello-na
  type: ClusterIP
