node-affinity/route-hello-na.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-na
    app.kubernetes.io/component: hello-na
    app.kubernetes.io/instance: hello-na
  name: hello-na
spec:
  port:
    targetPort: web
  to:
    kind: Service
    name: hello-na
    weight: 100
  wildcardPolicy: None
